force-app/main/default/objects/Client__c/fields/Assign__c.field-meta.xml
<CustomField>
    <fullName>Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Using active assigment rule</label>
    <type>Checkbox</type>
</CustomField>