force-app/main/default/objects/Client__c/fields/Current_Generator_s__c.field-meta.xml
<CustomField>
    <fullName>Current_Generator_s__c</fullName>
    <label>Current Generator(s)</label>
    <type>TextArea</type>
</CustomField>