force-app/main/default/objects/Client__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>Fax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>