force-app/main/default/objects/Client__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Working-Converted</fullName>
            </value>
            <value>
                <fullName>Working-Not converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>