force-app/main/default/objects/Client__c/fields/SIC_CODE__c.field-meta.xml
<CustomField>
    <fullName>SIC_CODE__c</fullName>
    <label>SIC Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>