force-app/main/default/objects/Client__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State/Province</label>
    <type>TextArea</type>
</CustomField>