force-app/main/default/objects/Client__c/validationRules/Phone_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Verification</fullName>
    <active>true</active>
    <errorConditionFormula>(len(Phone__c )  &lt;&gt; 10)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>The phone number is not valid</errorMessage>
</ValidationRule>